[gd_scene load_steps=2 format=3 uid="uid://b3e41jcsgj6bl"]

[ext_resource type="Script" path="res://scenes/maps/lobby/scenes/lobby_settings/lobby_settings.gd" id="1_h5l7u"]

[node name="LobbySettings" type="CanvasLayer"]
script = ExtResource("1_h5l7u")

[node name="SettingsContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.0
offset_top = -204.0
offset_right = 249.0
offset_bottom = 267.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="MaxConnectionsContainer" type="HSplitContainer" parent="SettingsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
dragger_visibility = 1

[node name="MaxConnectionsLabel" type="Label" parent="SettingsContainer/MarginContainer/VBoxContainer/MaxConnectionsContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Maksymalna
liczba graczy"

[node name="MaxConnectionsInput" type="OptionButton" parent="SettingsContainer/MarginContainer/VBoxContainer/MaxConnectionsContainer"]
custom_minimum_size = Vector2(65, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 8
size_flags_stretch_ratio = 0.0

[node name="LecturersAmountAlert" type="Label" parent="SettingsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "Zbyt wielu wykładowców na liczbę graczy!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="MaxLecturersContainer" type="HSplitContainer" parent="SettingsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MaxLecturersLabel" type="Label" parent="SettingsContainer/MarginContainer/VBoxContainer/MaxLecturersContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
text = "Maksymalna
liczba wykładowców"

[node name="MaxLecturersInput" type="OptionButton" parent="SettingsContainer/MarginContainer/VBoxContainer/MaxLecturersContainer"]
custom_minimum_size = Vector2(65, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 8
size_flags_stretch_ratio = 0.0
item_count = 3
selected = 2
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2

[node name="KillCooldownContainer" type="HSplitContainer" parent="SettingsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="KillCooldownLabel" type="Label" parent="SettingsContainer/MarginContainer/VBoxContainer/KillCooldownContainer"]
layout_mode = 2
text = "Czas odnowienia oblania"

[node name="KillCooldownInput" type="OptionButton" parent="SettingsContainer/MarginContainer/VBoxContainer/KillCooldownContainer"]
layout_mode = 2
item_count = 4
selected = 2
popup/item_0/text = "15s"
popup/item_0/id = 15
popup/item_1/text = "30s"
popup/item_1/id = 30
popup/item_2/text = "45s"
popup/item_2/id = 45
popup/item_3/text = "60s"
popup/item_3/id = 60

[node name="KillRadiusContainer" type="HSplitContainer" parent="SettingsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="KillRadiusLabel" type="Label" parent="SettingsContainer/MarginContainer/VBoxContainer/KillRadiusContainer"]
layout_mode = 2
text = "Promień oblania"

[node name="KillRadiusInput" type="OptionButton" parent="SettingsContainer/MarginContainer/VBoxContainer/KillRadiusContainer"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "domyślny"
popup/item_0/id = 260
popup/item_1/text = "mniejszy"
popup/item_1/id = 200
popup/item_2/text = "większy"
popup/item_2/id = 350

[node name="SaveButton" type="Button" parent="SettingsContainer/MarginContainer"]
custom_minimum_size = Vector2(165, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Zastosuj"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="item_selected" from="SettingsContainer/MarginContainer/VBoxContainer/MaxConnectionsContainer/MaxConnectionsInput" to="." method="_on_connections_lecturers_item_selected"]
[connection signal="item_selected" from="SettingsContainer/MarginContainer/VBoxContainer/MaxLecturersContainer/MaxLecturersInput" to="." method="_on_connections_lecturers_item_selected"]
[connection signal="pressed" from="SettingsContainer/MarginContainer/SaveButton" to="." method="_on_save_button_pressed"]
